--- a/views/count.erb
+++ b/views/count.erb
@@ -1,4 +1,6 @@
 <h1>Here is your Result </h1>
-<div class="col-md-12 result">
-<h3><%= @word %></h3>
+<div class="container">
+   <div class="col-md-12 result">
+<h1><%= @word %></h1>
+</div>
 </div>
