--- a/views/form.erb
+++ b/views/form.erb
@@ -4,7 +4,7 @@
   <div class="form-group">
 
     <label for="word"></label>
-    <input id="word" name="word" class="form-control" type="text">
+    <input id="word" name="word"  type="text">
   </div>
   <div class="form-group">
     <label for="sentence"></label>
