added a header in count.rb

--- a/views/count.erb
+++ b/views/count.erb
@@ -1,6 +1,6 @@
-<h1>Here is your Result </h1>
+<h1>HUREEEE !!!!! </h1>
 <div class="container">
    <div class="col-md-12 result">
-<h1><%= @word %></h1>
+<h3>RESULT:</h3><h1><%= @word %></h1>
 </div>
 </div>
