--- a/views/form.erb
+++ b/views/form.erb
@@ -1,14 +1,14 @@
 <h1> Word Count</h1>
-   <h2>Enter a sentence</h2>
+   <h3>Enter a word</h3>
   <form action='/word_count'>
   <div class="form-group">
 
     <label for="word"></label>
-    <input id="word" name="word"  type="text">
+    <input id="word" name="word" class="form-control" type="text">
   </div>
   <div class="form-group">
     <label for="sentence"></label>
-    <h3>enter sentence</h3>
+    <h3>Enter sentence</h3>
     <input id="sentence" name="sentence" class="form-control" type="text">
   </div>
 <button type="submit" class="btn btn-success">press</button>
