--- a/views/form.erb
+++ b/views/form.erb
@@ -1,10 +1,11 @@
 <h1> Word Count</h1>
-   <h3>Enter a word</h3>
+<hr>
+   <h3 style="text-align:center">Enter a word</h3>
   <form action='/word_count'>
   <div class="form-group">
 
     <label for="word"></label>
-    <input id="word" name="word" class="form-control" type="text">
+    <input  id="word" name="word" class="form-control" type="text">
   </div>
   <div class="form-group">
     <label for="sentence"></label>
