modified the count.erb file

--- a/views/count.erb
+++ b/views/count.erb
@@ -2,5 +2,7 @@
 <div class="container">
    <div class="col-md-12 result">
 <h3> YOUR RESULT:</h3><h1><%= @word %></h1>
+<h4>This how it worked the word that you entered was searched in thre sentence and counted how many times it repeated it self and in this case
+your word repeated itself  <em><strong><%= @word %></strong></em>  time(s)</h4>
 </div>
 </div>
