modified the form.erb file

--- a/views/form.erb
+++ b/views/form.erb
@@ -1,15 +1,16 @@
-<h1> Word Count</h1>
 <hr>
-   <h3 style="text-align:center">Enter a word</h3>
+<em><h1 style="color:blue; text-align:center;"> WORD COUNT</h1></em>
+<hr>
+   <h3 style="color:white; ">Enter a word</h3>
   <form action='/word_count'>
   <div class="form-group">
 
     <label for="word"></label>
-    <input  id="word" name="word" class="form-control" type="text">
+    <input  id="word" name="word"  type="text">
   </div>
   <div class="form-group">
     <label for="sentence"></label>
-    <h3>Enter sentence</h3>
-    <input id="sentence" name="sentence" class="form-control" type="text">
+    <h3 style="color:white; ">Enter sentence</h3>
+    <textarea rows="4" cols="50" id="sentence" name="sentence" class="form-control" type="text"></textarea>
   </div>
 <button type="submit" class="btn btn-success">press</button>
