--- a/views/count.erb
+++ b/views/count.erb
@@ -1,8 +1,8 @@
-<h1>HuReEeE !!!!! </h1>
-<div class="container">
+<h1 style="color:white"; >HuReEeE !!!!! </h1>
+<div style="hieght:200px"; class="container">
    <div class="col-md-12 result">
-<h3> YOUR RESULT:</h3><em><h1 style="color:red; "><%= @word %></h1></em>
-<strong><h4 style="color:blue;">This how it worked, the word that you entered was searched in the sentence and counted how many times it repeated itself<br> and in this case
+<h3 style="color:white";> YOUR RESULT:</h3><em><h1 style="color:red; "><%= @word %></h1></em>
+<strong><h4 style="color:white;">This how it worked, the word that you entered was searched in the sentence and counted how many times it repeated itself<br> and in this case
 your word repeated itself  <em><strong><%= @word %></strong></em>  time(s)</h4></strong>
 </div>
 </div>
