--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,8 +6,16 @@
       <link rel= 'stylesheet' href="css/styles.css">
     </head>
     <body>
+      <div style="background-color:black";  class="container">
       <div class="container outlet">
         <%= yield %>
       </div>
+    </div>
+    <hr>
+    <div  style="background-color:gray; "  style="hieght:200px";   style="text-align:center"; class="container">
+           <h1>Contact Us</h1>
+      <h3>www.wordcount.com<h3>
+      </div>
+    </hr>
     </body>
   </html>
