--- a/views/form.erb
+++ b/views/form.erb
@@ -1,6 +1,12 @@
 <hr>
-<em><h1 style="color:blue; text-align:center;"> WORD COUNT</h1></em>
-<hr>
+<em><h1 style="color:red; text-align:center;"> WORD COUNT</h1></em>
+
+       <h1 style="color:white; text-align:center;">Instructions</h1>
+       <ol style="color:white; " >
+         <li><p>enter any work you wish to in the word section</li></p>
+         <li><p>write a sentence that with or without the word you entered<br>to find out how many times it appeared</li></p>
+       </ol><br>
+       <hr>
    <h3 style="color:white; ">Enter a word</h3>
   <form action='/word_count'>
   <div class="form-group">
