--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,7 +12,7 @@
       </div>
     </div>
     <hr>
-    <div  style="background-color:gray; "  style="hieght:200px";   style="text-align:center"; class="container">
+    <div  style="background-color:black; hieght:200px; text-align:center; color:red"; class="container">
            <h1>Contact Us</h1>
       <h3>www.wordcount.com<h3>
       </div>
