--- a/views/form.erb
+++ b/views/form.erb
@@ -3,7 +3,7 @@
 
        <h1 style="color:white; text-align:center;">Instructions</h1>
        <ol style="color:white; " >
-         <li><p>enter any work you wish to in the word section</li></p>
+         <li><p>enter any word you wish to in the word section</li></p>
          <li><p>write a sentence that with or without the word you entered<br>to find out how many times it appeared</li></p>
        </ol><br>
        <hr>
